--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -9,7 +9,7 @@
     <title>
       Agenda Telefónica HSV
     </title>
-    <script type="module" crossorigin src="js/index-DvNpd4t2.js"></script>
+    <script type="module" crossorigin src="js/index-DhhHXBTw.js"></script>
   </head>
   <body>
     <header>
